# AdaSwarm

./: .gitignore  .pylintrc  LICENSE  MODERNIZATION.md  Makefile  README.md  SETUP.md  meta.yml  nn_utils.py  pyproject.toml  requirements.txt  requirements_pip.txt
.github/workflows/: build.yml  release.yml
adaswarm/: __init__.py  data.py  model.py  nn_utils.py  particle.py  rempso.py  resnet.py  swarm_loss.py
adaswarm/nn/: __init__.py
adaswarm/torchswarm/utils/: matrix.py
adaswarm/utils/: __init__.py  matrix.py  metrics.py  options.py  progressbar.py  strings.py
docs/: use-cases.md
examples/: README.md  compare.py  f0_pitch_estimation.ipynb  insar_phase_unwrapping.ipynb  lightning.py  main.py  quickstart.ipynb  quickstart.py  simulator_in_the_loop.ipynb  tof_depth_unwrapping.ipynb  why_adaswarm.ipynb  why_adaswarm.py
models/: resnet.py
notebooks/: LightningModule_Adam.ipynb  modeling_in_pytorch.ipynb
notebooks/.ipynb_checkpoints/: modeling_in_pytorch-checkpoint.ipynb
optimizer/: __init__.py  adaswarm.py
resnet_18/: main_adam.py  main_adaswarm.py  main_diffgrad.py
resnet_18/torchswarm_gpu/: rempso.py  rpso.py
resnet_18/torchswarm_gpu/utils/: rpso.py
src/: Makefile  main.py  nn_utils.py  test_particle_swarm_optimizer.py  test_particleswarm.py
src/adaswarm/: data.py  particle.py
src/adaswarm/nn/: __init__.py
src/examples/: main.py
src/torchswarm/: particle.py  pso.py  rempso.py
src/torchswarm/utils/: rpso.py
tests/unit/: test_acceleration_coefficients.py  test_data_loader_fetcher.py  test_loss_functions.py  test_metrics.py  test_particle.py  test_particle_swarm_optimizer.py  test_particleswarm.py  test_str_util.py  test_swarm_loss.py
tests/unit/output/: summary.md
torchswarm/: particle.py  pso.py
torchswarm_gpu/: particle.py  rpso.py
