[tool.poetry]
name = "adaswarm"
version = "0.0.2"
description = "An implementation of particle swarm optimisation loss function for PyTorch"
authors = ["Frank Kelly", "Zabil CM"]
maintainers= ["Frank Kelly", "Zabil CM"]
license = "MIT"
readme = "README.md"
homepage = ""
repository = "https://github.com/AdaSwarm/AdaSwarm"
documentation = ""
keywords = [
    "PyTorch",
    "PSO",
    "swarm",
    "Adam",
    "Optimizer",
    "Cross Entropy",
    "Computer vision"
]


[tool.poetry.dependencies]
python = ">=3.9.0, <3.11"
torch = "^1.10.0"
torchvision = "^0.11.1"

pandas = "^1.4.0"
tabulate = "^0.8.9"
scipy = "^1.7.0"
scikit-learn = "^1.0.2"
matplotlib = "^3.5.1"
visidata = "^2.8"
seaborn = "^0.11.2"

[tool.poetry.dev-dependencies]
pylint = "^2.12.2"
black = "^21.12b0"
py-spy = "^0.3.11"
freezegun = "^1.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
issues = "https://github.com/AdaSwarm/AdaSwarm/issues"