[project]
name = "adaswarm"
version = "0.3.0"
description = "A PyTorch particle-swarm-optimisation loss function that augments gradient-based optimisers with swarm intelligence."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Frank Kelly" },
    { name = "Zabil CM" },
]
maintainers = [
    { name = "Frank Kelly" },
    { name = "Zabil CM" },
]
keywords = [
    "PyTorch",
    "PSO",
    "swarm",
    "Adam",
    "Optimizer",
    "Cross Entropy",
    "Computer vision",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# Core runtime dependencies (kept minimal — only what the library imports).
dependencies = [
    "torch>=2.2",
    "numpy>=1.24",
    "scikit-learn>=1.3",
]

[project.optional-dependencies]
# Extras for running the bundled examples/notebooks (MNIST + plotting).
examples = [
    "torchvision>=0.17",
    "matplotlib>=3.8",
    "jupyter>=1.0",
]

[project.urls]
Homepage = "https://github.com/AdaSwarm/AdaSwarm"
Repository = "https://github.com/AdaSwarm/AdaSwarm"
Issues = "https://github.com/AdaSwarm/AdaSwarm/issues"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["adaswarm"]

[tool.hatch.build.targets.sdist]
# Keep the source distribution lean — exclude the large papers, logs and data.
include = [
    "adaswarm",
    "examples",
    "tests",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
# B008: `get_device()` is intentionally used as a default arg in a few call sites.
# Removing it is tracked as a Phase 4 config-object refactor in MODERNIZATION.md.
ignore = ["B008"]

[tool.ruff.lint.per-file-ignores]
# Notebooks favour compact, illustrative code: allow the plotting idiom, long
# lines, short lambdas, one-line loops and relaxed zip() that would be noise to
# refactor in a demo.
"*.ipynb" = ["E702", "E501", "E731", "E701", "B905"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true